Improved readability for pre elements and minor style consistency fixes

--- a/assets/scss/components/_dock.scss
+++ b/assets/scss/components/_dock.scss
@@ -52,7 +52,7 @@
 			padding: 0.5rem;
 			background: var(--header-background-color);
 			border: 1px solid var(--border-color);
-			border-radius: 6px;
+			border-radius: 10px;
 			cursor: move;
 
 			input {
