--- a/assets/scss/components/_system.scss
+++ b/assets/scss/components/_system.scss
@@ -7,34 +7,41 @@
 	display: none;
 }
 
-body.error-log-active .error-log-section {
-	position: relative;
-	display: flex !important;
-	flex-direction: column;
-	animation: fadeIn 1.5s ease-in;
-	margin-top: -123px;
-	z-index: 1;
+body.error-log-active {
+	.error-log-section {
+		position: relative;
+		display: flex !important;
+		flex-direction: column;
+		animation: fadeIn 1.5s ease-in;
+		padding-top: 0;
+		margin-top: -123px;
+		z-index: 1;
 
-	h3 {
-		margin-bottom: 5px;
+		h3 {
+			margin-bottom: 5px;
+		}
+
+		button {
+			display: flex;
+			align-items: center;
+			cursor: pointer;
+			background: none;
+			border: none;
+			color: inherit;
+			transition: color 0.3s;
+
+			svg {
+				margin-right: 5px;
+			}
+
+			&:hover {
+				color: var(--hover-color) !important;
+			}
+		}
 	}
 
-	button {
-		display: flex;
-		align-items: center;
-		cursor: pointer;
-		background: none;
-		border: none;
-		color: inherit;
-		transition: color 0.3s;
-
-		svg {
-			margin-right: 5px;
-		}
-
-		&:hover {
-			color: var(--hover-color) !important;
-		}
+	main > section.error-log-section:nth-of-type(2) {
+		padding-top: 20px;
 	}
 }
 
