--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -34,6 +34,9 @@ pre {
 	overflow-wrap: break-word;
 	overflow-x: auto;
 	max-width: 100%;
+	background: var(--header-background-color);
+	border-radius: 10px;
+	padding: 15px;
 }
 
 .container {
